text center for headers

--- a/src/main/resources/templates/admin_orders.html
+++ b/src/main/resources/templates/admin_orders.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 <header th:replace="navbar"></header>
-<h2>Заказы:</h2>
+<div class="container text-center">
+    <h2>Заказы пользователей:</h2>
+</div>
 <div class="container">
     <table class="table table-striped">
         <thead>
