--- a/src/main/resources/templates/admin_feedbacks.html
+++ b/src/main/resources/templates/admin_feedbacks.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
-    <title>Отзывы пользователей</title>
+    <title>User feedbacks</title>
 </head>
 <body>
 <header th:replace="navbar"></header>
 
 <div class="container">
     <div>
-        <p class="section-title">Ваши отзывы</p>
+        <h2 class="container text-center">Отзывы пользователей</h2>
     </div>
     <div>
         <table class="table">
