--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <header th:replace="navbar"></header>
+<div class="container text-center">
 <h2>Корзина:</h2>
+</div>
 <div class="container">
     <table class="table table-striped">
         <thead>
