--- a/src/main/resources/templates/update_product.html
+++ b/src/main/resources/templates/update_product.html
@@ -8,12 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
-    <title>Create Product</title>
+    <title>Update Product</title>
 </head>
 <body>
 <header th:replace="navbar"></header>
 <div class="container">
-    <h2>Обновление товара</h2>
+    <div class="container text-center">
+        <h2>Обновление товара</h2>
+    </div>
     <form th:action="@{/product/update}" method="post">
         <div class="form-check">
             <input type="hidden" name="productId" th:value="${product.getId()}">
