--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -10,37 +10,26 @@
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
 </head>
-<style>
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
-    .form-container {
-        max-width: 400px;
-    }
-</style>
-</head>
 <body>
-<div class="container form-container">
-    <h2 class="text-center mt-3">Вход в аккаунт</h2>
-    <form method="post" th:action="@{/login}" class="mt-3">
-        <div class="form-group">
-            <label for="login">Логин</label>
-            <input type="text" class="form-control" id="login" name="login" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Пароль</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <br>
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary">Войти</button>
-        </div>
-    </form>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="container form-container">
+        <h2 class="text-center mt-3">Вход в аккаунт</h2>
+        <form method="post" th:action="@{/login}" class="mt-3">
+            <div class="form-group mx-auto col-md-5">
+                <label for="login">Логин</label>
+                    <input type="text" class="form-control" id="login" name="login" required>
+                </div>
+            <div class="form-group mx-auto col-md-5">
+                <label for="password">Пароль</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="text-center mt-3">
+                <button type="submit" class="btn btn-primary">Войти</button>
+            </div>
+        </form>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
