--- a/src/main/resources/templates/update_product.html
+++ b/src/main/resources/templates/update_product.html
@@ -12,38 +12,36 @@
 </head>
 <body>
 <header th:replace="navbar"></header>
-<div class="container">
+<div class="container form-container">
     <div class="container text-center">
         <h2>Обновление товара</h2>
     </div>
-    <form th:action="@{/product/update}" method="post">
-        <div class="form-check">
+    <form th:action="@{/product/update}" method="post" class="mt-3">
+        <div class="container form-container">
             <input type="hidden" name="productId" th:value="${product.getId()}">
-            <div class="form-group">
+            <div class="form-group mx-auto col-md-5">
                 <label for="productName">Название товара</label>
                 <input type="text" class="form-control" id="productName" name="productName"
                        th:value="${product.getName()}" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mx-auto col-md-5">
                 <label for="productPrice">Цена товара</label>
                 <input type="number" class="form-control" id="productPrice" name="productPrice"
                        th:value="${product.getPrice()}" required>
             </div>
-            <p>Впишите новые значения характеристик:</p>
+            <p class="container text-center mt-2">Впишите новые значения характеристик:</p>
             <div th:each="value : ${product.getValues()}">
-                <div class="form-group">
+                <div class="form-group mx-auto col-md-5">
                     <input type="hidden" name="option" th:value="${value.getOption().getId()}">
                     <label for="value" th:text="${value.getOption().getName()}"></label>
                     <input type="text" class="form-control" id="value" name="value"
                            th:value="${value.getValue()}" required>
                 </div>
             </div>
-            <br>
-            <div class="update_button">
+            <div class="update_button mt-3 text-center">
                 <button type="submit" class="btn btn-primary">Обновить</button>
             </div>
         </div>
-        <br>
     </form>
 </div>
 </body>
