--- a/src/main/resources/templates/choose_category.html
+++ b/src/main/resources/templates/choose_category.html
@@ -9,34 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>Create Product</title>
 </head>
 <body>
 <header th:replace="navbar"></header>
-<div class="container">
-    <div class="row mt-3">
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="row mt-5">
         <div class="col">
-            <h3>Создание товара</h3>
+            <h3 class="text-center">Создание товара</h3>
             <form action="/product/add_product" method="get">
                 <div class="form-check">
                     <b>Выберите категорию:</b>
                     <div th:each="category : ${categories}">
                         <div class="form-check">
-                            <input class="form-check-input"
-                                   type="radio"
-                                   name="categoryId"
+                            <input class="form-check-input" type="radio" name="categoryId"
                                    th:value="${category.getId()}"
-                                   th:id="${category.getId()}"
-                                   required>
+                                   th:id="${category.getId()}" required>
                             <label class="form-check-label" th:for="${category.getId()}"
                                    th:text="${category.getName()}"></label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary mt-3">Подтвердить</button>
+                    <div class="text-center mt-2">
+                        <button type="submit" class="btn btn-primary">Подтвердить</button>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
