--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
@@ -15,29 +14,30 @@
 <body>
 <header th:replace="navbar"></header>
 <div class="container">
-    <h2>Создание товара</h2>
+    <h2 class="container text-center">Создание товара</h2>
     <form th:action="@{/product/add_product}" method="post">
         <input type="hidden" name="categoryId" th:value="${category.id}">
-        <div class="form-group">
+        <div class="form-group mx-auto col-md-5">
             <label for="productName">Название товара</label>
             <input type="text" class="form-control" id="productName" name="productName"
                    placeholder="Введите название товара" required>
         </div>
-        <div class="form-group">
+        <div class="form-group mx-auto col-md-5">
             <label for="productPrice">Цена товара</label>
             <input type="text" class="form-control" id="productPrice" name="productPrice"
                    placeholder="Введите цену товара" required>
         </div>
         <div th:each="option : ${category.options}">
-            <div class="form-group">
-                 <p th:text="${option.name}"></p>
+            <div class="form-group mx-auto col-md-5">
+                <p th:text="${option.name}"></p>
                 <input type="hidden" name="option" th:value="${option.id}">
                 <input type="text" class="form-control" id="value" name="value"
                        placeholder="Введите значение" required>
             </div>
         </div>
-        <br>
-        <button type="submit" class="btn btn-primary">Добавить в каталог</button>
+        <div class="text-center mx-auto col-md-5 mt-3">
+            <button type="submit" class="btn btn-primary ">Добавить в каталог</button>
+        </div>
     </form>
 </div>
 </body>
