--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,28 +13,29 @@
 <body>
 <header th:replace="navbar"></header>
 <div class="container">
-    <h2 class="mt-3"> Регистрация пользователя</h2>
+    <h2 class="container text-center mt-3"> Регистрация пользователя</h2>
     <form method="post" th:action="@{/adduser}" th:object="${user}" class="mt-3">
-        <div class="mb-3">
+        <div class="mx-auto col-md-5 mb-3">
             <label for="login" class="form-label">Логин пользователя</label>
             <input type="text" id="login" th:field="*{login}" class="form-control" required>
         </div>
-        <div class="mb-3">
+        <div class="mx-auto col-md-5 mb-3">
             <label for="password" class="form-label">Введите пароль</label>
             <input type="password" id="password" th:field="*{password}" class="form-control" required>
         </div>
-        <div class="mb-3">
+        <div class="mx-auto col-md-5 mb-3">
             <label for="name" class="form-label">Имя пользователя</label>
             <input type="text" id="name" th:field="*{name}" class="form-control" required>
         </div>
-        <div class="mb-3">
+        <div class="mx-auto col-md-5 mb-3">
             <label for="surname" class="form-label">Фамилия пользователя</label>
             <input type="text" id="surname" th:field="*{surname}" class="form-control" required>
         </div>
-        <div class="mb-3">
+        <div class="mx-auto text-center mb-3">
             <span th:if="${error}" class="text-danger" th:text="${error}"></span>
+            <button type="submit" class="btn btn-outline-secondary">Зарегистрировать</button>
         </div>
-        <button type="submit" class="btn btn-outline-secondary">Зарегистрировать</button>
+
     </form>
 </div>
 </body>
