registration form in login page

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -25,7 +25,6 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Меню
                     </a>
-<!--                    <a class="user_feedbacks" th:href = "@{/}">Отзывы пользователей</a>-->
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" th:href="@{/profile}">Мой профиль</a></li>
                         <li><a class="dropdown-item" th:href="@{/order}">Мои заказы</a></li>
@@ -38,10 +37,10 @@
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
+<!--            <form class="d-flex">-->
+<!--                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">-->
+<!--                <button class="btn btn-outline-success" type="submit">Поиск</button>-->
+<!--            </form>-->
         </div>
     </div>
 </nav>
