--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -17,14 +17,20 @@
         <form method="post" th:action="@{/login}" class="mt-3">
             <div class="form-group mx-auto col-md-5">
                 <label for="login">Логин</label>
-                    <input type="text" class="form-control" id="login" name="login" required>
-                </div>
+                <input type="text" class="form-control" id="login" name="login" required>
+            </div>
             <div class="form-group mx-auto col-md-5">
                 <label for="password">Пароль</label>
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <div class="text-center mt-3">
-                <button type="submit" class="btn btn-primary">Войти</button>
+            <div class="text-center mt-2">
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Войти</button>
+                </div>
+                <div class="text-center mt-2">
+                    <a th:href="@{/adduser}" class="btn btn-info">
+                        <i class="fas fa-plus"></i>Зарегистрироваться</a>
+                </div>
             </div>
         </form>
     </div>
