--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -31,16 +31,16 @@
                         <li><a class="dropdown-item" th:href="@{/cart}">Моя корзина</a></li>
                         <li th:if="${#authorization.expr('hasRole(''admin'')')}">
                             <a class="dropdown-item" th:href="@{/show_admin_orders}">Заказы пользователей</a></li>
-                        <li th:if="${#authorization.expr('hasRole(''admin'')')}"><a class="dropdown-item" th:href="@{/admin/feedbacks}">Отзывы пользователей</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li th:if="${#authorization.expr('hasRole(''admin'')')}"><a class="dropdown-item"
+                                                                                    th:href="@{/admin/feedbacks}">Отзывы
+                            пользователей</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
                     </ul>
                 </li>
             </ul>
-<!--            <form class="d-flex">-->
-<!--                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">-->
-<!--                <button class="btn btn-outline-success" type="submit">Поиск</button>-->
-<!--            </form>-->
         </div>
     </div>
 </nav>
