--- a/src/main/resources/templates/show_info.html
+++ b/src/main/resources/templates/show_info.html
@@ -54,21 +54,17 @@
                 <input type="hidden" name="productId" th:value="${product.id}">
                 <div class="mb-3">
                     <label class="form-label">Ваш отзыв:</label>
-
 <textarea class="form-control" name="textFeedback"
           placeholder="Введите ваш комментарий"
           style="resize: vertical"
           required></textarea>
-
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Оценка:</label>
                         <input type="number" class="form-control" name="score"
                                th:value="${feedback != null ? feedback.getScoreFeedback() : ''}"
                                placeholder="Введите оценку"
-                               required min="1" max="5">
-
-                </div>
+                               required min="1" max="5"></div>
                 <button type="submit" class="btn btn-primary">Отправить отзыв</button>
             </form>
         </div>
